--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   wifi_iot: ^0.3.18
   font_awesome_flutter: ^10.4.0
+  connectivity_plus: ^4.0.1
 
 dev_dependencies:
   flutter_test:
